src/components/styles/SideBar.css
.sidebar {
  display: flex;
  max-width: 345px;
  width: 100%;
  justify-items: flex-start;
  flex-direction: column;
  flex: 1;
  padding: 19px 40px;
}

.sidebar__profile {
  display: flex;
  gap: 16px;
  height: fit-content;
  align-items: center;
}

.sidebar__avatar {
  height: 56px;
  width: 56px;
  border: 1px solid #00000080;
  border-radius: 50%;
}

.sidebar__avatar_none {
  display: flex;
  background-color: #00000033;
  border: 1px solid #00000080;
  border-radius: 50%;
  font-size: 20px;
  line-height: 100%;
  letter-spacing: 0%;
  justify-content: center;
  align-items: center;
  color: #000;
}

.sidebar__user-name {
  margin: 0;
}

.sidebar__container {
  display: flex;
  gap: 8px;
  margin-top: 24px;
  flex-direction: column;
  align-items: start;
}

.sidebar__btn {
  border: 0;
  background: none;
  padding: 0;
  max-height: 24px;
  font-weight: 700;
}

.sidebar__btn:hover {
  text-decoration: underline;
  cursor: pointer;
}

@media screen and (max-width: 430px) {
  .sidebar {
    visibility: collapse;
    padding: 0;
    margin: 0;
    width: 40px;
    flex: 0;
  }
}

